fix: fix issue with controls jumping

--- a/src/components/BreakContent/BreakContent.module.scss
+++ b/src/components/BreakContent/BreakContent.module.scss
@@ -5,10 +5,11 @@
     display: flex;
     flex-direction: column;
     .headerContainer {
-      display: flex;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: 1fr auto 1fr;
       align-items: center;
       .controlIcon {
+        width: 100%;
         cursor: pointer;
         position: relative;
         top: 3px;
